# npc-labeler

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  STREAMING_SPECIFICATION.md  docker-entrypoint.sh  labeler.py  labelled_mgf_counts.csv  manual.json  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  update-progress-dashboard.yml
migrations/00000000000000_create_tables/: down.sql  up.sql
npc_labeler/: __init__.py  cli.py  downloads.py  model.py  output.py  pipeline.py  state.py
npc_labeler/original/: __init__.py  fingerprint_handler.py  prediction_voting.py
scripts/: classified_counts.py  into_csv.py  visualization.py
src/: api.rs  db.rs  export.rs  failure_log.rs  main.rs  models.rs  output.rs  schema.rs  state.rs  test_support.rs  ui.rs  zenodo.rs
tests/: test_model.py  test_output.py  test_state.py
